Removing un-needed file paths and adding / to make directories obvious

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,6 @@
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
 # next.js
 /.next/
 /out/
@@ -17,7 +14,6 @@
 
 # misc
 .DS_Store
-*.pem
 
 # debug
 npm-debug.log*
@@ -28,9 +24,12 @@ yarn-error.log*
 .env*
 
 # vercel
-.vercel
+/.vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-models
+/models/
+
+# Project specific
+/ollama/
